[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"
authors = ["Berin Aniesh <berinaniesh@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = ">=1.0.132"
serde_json = ">=1.0.73"
serde_derive = ">=1.0.132"
sha2 = ">=0.10.0"
